# miles-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.toml
.codex/agents/: backend_architect.toml  database_architect.toml  lovable_frontend_builder.toml  observability_analyst.toml  pr_reviewer.toml  product_feedback_analyst.toml  product_guardian.toml  railway_deploy_engineer.toml  readiness_validator.toml  roadmap_orchestrator.toml  scraper_engineer.toml  software_architect.toml  (+3 more)
.github/: pull_request_template.md
agents/: branching-strategy.md  operating-model.md  task-execution.md
alembic/: env.py
architecture/: api-contracts.md  architecture.md  data-model.md  engineering-standards.md  infra.md  scraping-strategy.md
docs/: agentic-maturity-model.md  codex-native-plan.md
execution/: codex-activation-automation-plan.md  done-criteria.md  execution-map.md  handoff-protocol.md  linear-usage.md  product-agent-pipeline.md  ticket-template.md  ticket-type-activation-matrix.md  workflow.md
frontend/: lovable-reference.md
observability/: datadog-strategy.md
product/: anti-goals.md  constraints.md  feedback-loop.md  prd.md  roadmap.md  vision.md  working-backwards.md
setup/: bootstrap-codex.sh  maintenance-codex.sh  setup-wizard.md
tests/: test_alert_repository.py  test_alert_service.py  test_alerts_api.py  test_config.py  test_frontend_api_contracts.py  test_health.py  test_program_repository.py  test_programs_api.py  test_scraper_base.py
(+77 files in other folders)
